--- a/index.html
+++ b/index.html
@@ -26,8 +26,37 @@
           </p>
           <button class="sign-up">Sign up</button>
         </div>
-        <img src="https://picsum.photos/520/240" alt="" />
+        <img src="hero.png" alt="" />
       </section>
     </header>
+    <section class="info">
+      <h2 class="info-text">Some random information.</h2>
+      <div class="item-container">
+        <div class="item">
+          <img class="item-img" src="img1.jpeg" alt="" />
+          <p class="subtext">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="item">
+          <img class="item-img" src="img2.jpeg" alt="" />
+          <p class="subtext">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="item">
+          <img class="item-img" src="img3.jpeg" alt="" />
+          <p class="subtext">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="item">
+          <img class="item-img" src="img4.jpeg" alt="" />
+          <p class="subtext">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
