--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             This website has some subtext that goes here under the main title.
             It's smaller font and the color is lower contrast
           </p>
-          <button class="sign-up">Sign up</button>
+          <button class="sign-up-btn">Sign up</button>
         </div>
         <img src="hero.png" alt="" />
       </section>
@@ -55,6 +55,31 @@
           <p class="subtext">
             this is some subtext under an illustration or image
           </p>
+        </div>
+      </div>
+    </section>
+    <section class="quote">
+      <figure>
+        <blockquote cite="https://www.huxley.net/bnw/four.html">
+          <p>
+            This is an inspiring quote, or a testiomonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </p>
+        </blockquote>
+        <figcaption>—Thor, <cite>God of Thunder</cite></figcaption>
+      </figure>
+    </section>
+    <section class="sign-up">
+      <div class="action">
+        <div class="action-info">
+          <h3>Call to action! It's time!</h3>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <div class="action-btn">
+          <button>Sign-up</button>
         </div>
       </div>
     </section>
