--- a/index.html
+++ b/index.html
@@ -83,5 +83,8 @@
         </div>
       </div>
     </section>
+    <footer>
+      <span>Copyright &copy; The Odin Project 2021</span>
+    </footer>
   </body>
 </html>
