--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <navbar>
         <h2 class="logo">Header Logo</h2>
         <ul class="nav-links">
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
+          <li>one</li>
+          <li>two</li>
+          <li>three</li>
         </ul>
       </navbar>
       <section class="hero">
